# graphql_rust

./: Cargo.toml
src/: graphql_schema.rs  main.rs
