[package]
name = "graphql_intro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.2"
serde_json = "1.0"
futures = { version = "^0.3.1", features = ["compat"] }
futures-macro = "^0.3.1"
juniper = "0.15.9"
juniper_rocket = "0.8.2"
tokio-postgres = { version = "0.5", features = ["with-uuid-0_8"] }
uuid = { version = "0.8", features = ["v4"] }

